--- a/sesiones.ipynb
+++ b/sesiones.ipynb
@@ -3,83 +3,95 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "source": [
-    "print(5//3)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "1\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "print(5//3)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "source": [
-    "print(5/3)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "1.6666666666666667\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "print(5/3)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "source": [
-    "print(5//3)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "1\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "print(5//3)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "source": [
-    "print(5//2)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "2\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "print(5//2)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#print"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.67\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "# Redondeamos un número flotante\n",
     "print(round(2.66666666666666, 2)) \n",
@@ -91,23 +103,22 @@
     "score += 1 \n",
     "score -= 1\n",
     "print(score)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "2.67\n",
-      "2\n",
-      "1\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "your score is 0, your height is 1.8, you are winning is True\n",
+      "you are 12 years old\n"
+     ]
+    }
+   ],
    "source": [
     "# Utilizamos la f para que no haya conflicto cuando hay varios tiepos de variable\n",
     "score = 0\n",
@@ -115,23 +126,30 @@
     "isWinning = True\n",
     "\n",
     "# f-String\n",
-    "print(f\"your score is {score}, your height is {height}, you are winning is {isWinning}\")"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "your score is 0, your height is 1.8, you are winning is True\n"
-     ]
-    }
-   ],
-   "metadata": {}
+    "print(f\"your score is {score}, your height is {height}, you are winning is {isWinning}\")\n",
+    "int(2.7)\n",
+    "age = 12\n",
+    "print(f\"you are {age} years old\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
- "nbformat": 4,
- "nbformat_minor": 2,
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -142,7 +160,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.9.13"
   }
- }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
